# suzano-thera-tech-assmt

./: README.md  main.md
generator/: __main__.py  main.py  pyproject.toml  ruff.toml
generator/diagrams/: __init__.py  definitions.py  methods.py  tests.py
generator/markdown/: __init__.py  methods.py  tests.py
generator/shared/: __init__.py  types.py
generator/src/: __main__.py  main.py
generator/src/shared/: __init__.py  enums.py  types.py
resources/ai/claude/: initial-arch-proposal-high-level.md  prompt.txt
resources/diagrams/mermaid/: arch-diagram-access-mgmt-platform.mmd  seq-diagram-approved-user-request-flow.mmd  state-diagram-access-mgmt-platform.mmd  uc-diagram-access-mgmt-platform.mmd
resources/diagrams/mmd/: er-diagram-access-mgmt-platform.mmd  seq-diagram-rejected-user-request-flow.mmd
scripts/ps1/: format.ps1  lint.ps1  test.ps1
scripts/sh/: format.sh  lint.sh  test.sh
sections/: all-specs.md  architecture-specs.md  bounded-context-services-specs.md  domain-entities-specs.md  event-oriented-flow-specs.md  risk-assessment-specs.md  scalability-specs.md  use-cases-specs.md
specs/: main.md
specs/sections/: architecture-specs.md  bounded-context-services-specs.md  risk-assessment-specs.md
