[project]
name = "generator"
version = "0.1.0"
description = "Realiza a conversão entre formatos de arquivos utilizados na documentação técnica em markdown (.md). Parte da avaliação técnica para o cargo de full-stack engineer sênior na Thera Consulting/Suzano."
readme = "README.md"
requires-python = ">=3.13"
authors =[
    { name = "Guilherme Gonçalves (lwglg)", email = "lwglguilherme@gmail.com" },
]

dependencies = [
    "coverage>=7.14.1",
    "loguru>=0.7.3",
    "markdown-pdf>=1.13.2",
    "mmdc>=0.4.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
